--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -141,6 +141,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/common/v1/common.grpc.pb.h
     ${PROTO_GEN_DIR}/common/v1/common.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.pb.h
+    ${PROTO_GEN_DIR}/component/arm/v1/arm.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/arm/v1/arm.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/arm/v1/arm.pb.cc
+    ${PROTO_GEN_DIR}/component/arm/v1/arm.pb.h
     ${PROTO_GEN_DIR}/component/base/v1/base.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/base/v1/base.grpc.pb.h
     ${PROTO_GEN_DIR}/component/base/v1/base.pb.cc
@@ -270,6 +274,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/app/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.grpc.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.pb.cc
+    ${PROTO_GEN_DIR}/component/arm/v1/arm.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/arm/v1/arm.pb.cc
     ${PROTO_GEN_DIR}/component/base/v1/base.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/base/v1/base.pb.cc
     ${PROTO_GEN_DIR}/component/board/v1/board.grpc.pb.cc
@@ -318,6 +324,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/app/v1/robot.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/common/v1/common.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/common/v1/common.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/arm/v1/arm.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/arm/v1/arm.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/base/v1/base.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/base/v1/base.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/board/v1/board.grpc.pb.h
