initial commit arm client

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -54,6 +54,7 @@ target_sources(viamsdk
     components/motor.cpp
     components/movement_sensor.cpp
     components/power_sensor.cpp
+    components/private/arm_client.cpp
     components/private/base_client.cpp
     components/private/base_server.cpp
     components/private/board_client.cpp
