--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -55,6 +55,7 @@ target_sources(viamsdk
     components/movement_sensor.cpp
     components/power_sensor.cpp
     components/private/arm_client.cpp
+    components/private/arm_server.cpp
     components/private/base_client.cpp
     components/private/base_server.cpp
     components/private/board_client.cpp
