generate gripper code and add to api sources

--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -165,6 +165,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.h
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.h
+    ${PROTO_GEN_DIR}/component/gripper/v1/gripper.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/gripper/v1/gripper.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/gripper/v1/gripper.pb.cc
+    ${PROTO_GEN_DIR}/component/gripper/v1/gripper.pb.h
     ${PROTO_GEN_DIR}/component/motor/v1/motor.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/motor/v1/motor.grpc.pb.h
     ${PROTO_GEN_DIR}/component/motor/v1/motor.pb.cc
@@ -286,6 +290,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
+    ${PROTO_GEN_DIR}/component/gripper/v1/gripper.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/gripper/v1/gripper.pb.cc
     ${PROTO_GEN_DIR}/component/motor/v1/motor.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/motor/v1/motor.pb.cc
     ${PROTO_GEN_DIR}/component/movementsensor/v1/movementsensor.grpc.pb.cc
@@ -336,6 +342,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/gripper/v1/gripper.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/gripper/v1/gripper.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/motor/v1/motor.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/motor/v1/motor.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/movementsensor/v1/movementsensor.grpc.pb.h
