add gripper files and introduce gripper abc

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -51,6 +51,7 @@ target_sources(viamsdk
     components/component.cpp
     components/encoder.cpp
     components/generic.cpp
+    components/gripper.cpp
     components/motor.cpp
     components/movement_sensor.cpp
     components/power_sensor.cpp
@@ -128,6 +129,7 @@ target_sources(viamsdk
       ../../viam/sdk/components/component.hpp
       ../../viam/sdk/components/encoder.hpp
       ../../viam/sdk/components/generic.hpp
+      ../../viam/sdk/components/gripper.hpp
       ../../viam/sdk/components/motor.hpp
       ../../viam/sdk/components/movement_sensor.hpp
       ../../viam/sdk/components/power_sensor.hpp
