add gripper client

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -66,6 +66,7 @@ target_sources(viamsdk
     components/private/encoder_client.cpp
     components/private/encoder_server.cpp
     components/private/generic_client.cpp
+    components/private/gripper_client.cpp
     components/private/generic_server.cpp
     components/private/motor_client.cpp
     components/private/motor_server.cpp
