add gantry client

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -66,6 +66,7 @@ target_sources(viamsdk
     components/private/camera_server.cpp
     components/private/encoder_client.cpp
     components/private/encoder_server.cpp
+    components/private/gantry_client.cpp
     components/private/generic_client.cpp
     components/private/gripper_client.cpp
     components/private/gripper_server.cpp
