--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -161,6 +161,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.h
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.cc
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.h
+    ${PROTO_GEN_DIR}/component/gantry/v1/gantry.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/gantry/v1/gantry.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/gantry/v1/gantry.pb.cc
+    ${PROTO_GEN_DIR}/component/gantry/v1/gantry.pb.h
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.h
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
@@ -288,6 +292,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.cc
+    ${PROTO_GEN_DIR}/component/gantry/v1/gantry.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/gantry/v1/gantry.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
     ${PROTO_GEN_DIR}/component/gripper/v1/gripper.grpc.pb.cc
@@ -340,6 +346,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/gantry/v1/gantry.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/gantry/v1/gantry.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/gripper/v1/gripper.grpc.pb.h
