--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -50,6 +50,7 @@ target_sources(viamsdk
     components/camera.cpp
     components/component.cpp
     components/encoder.cpp
+    components/gantry.cpp
     components/generic.cpp
     components/gripper.cpp
     components/motor.cpp
@@ -65,6 +66,8 @@ target_sources(viamsdk
     components/private/camera_server.cpp
     components/private/encoder_client.cpp
     components/private/encoder_server.cpp
+    components/private/gantry_client.cpp
+    components/private/gantry_server.cpp
     components/private/generic_client.cpp
     components/private/gripper_client.cpp
     components/private/gripper_server.cpp
@@ -130,6 +133,7 @@ target_sources(viamsdk
       ../../viam/sdk/components/camera.hpp
       ../../viam/sdk/components/component.hpp
       ../../viam/sdk/components/encoder.hpp
+      ../../viam/sdk/components/gantry.hpp
       ../../viam/sdk/components/generic.hpp
       ../../viam/sdk/components/gripper.hpp
       ../../viam/sdk/components/motor.hpp
