--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -78,6 +78,7 @@ target_sources(viamsdk
     components/private/movement_sensor_client.cpp
     components/private/movement_sensor_server.cpp
     components/private/pose_tracker_client.cpp
+    components/private/pose_tracker_server.cpp
     components/private/power_sensor_client.cpp
     components/private/power_sensor_server.cpp
     components/private/sensor_client.cpp
