add pose tracker mocks

--- a/src/viam/sdk/tests/CMakeLists.txt
+++ b/src/viam/sdk/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ target_sources(viamsdk_test
     mocks/mock_motor.cpp
     mocks/mock_motion.cpp
     mocks/mock_movement_sensor.cpp
+    mocks/mock_pose_tracker.cpp
     mocks/mock_power_sensor.cpp
     mocks/mock_sensor.cpp
     mocks/mock_servo.cpp
