--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -46,12 +46,14 @@ jobs:
           BOOST_ROOT: ${{ github.workspace }}/boost/boost
       - name: cleanup
         run: rm -rf boost/ && rm -rf vcpkg/
+      - name: Update proto tag
+        run: sed -i -e 's/VIAMCPPSDK_API_PROTO_LABEL "v[0-9]*\.[0-9]*\.[0-9]*"/VIAMCPPSDK_API_PROTO_LABEL "${{ github.event.client_payload.tag }}"' src/viam/sdk/CMakeLists.txt
       - name: Add + Commit + Open PR
         uses: peter-evans/create-pull-request@v3
         with:
           commit-message: '[WORKFLOW] Updating protos from ${{ github.event.client_payload.repo_name }}, commit: ${{ github.event.client_payload.sha }}'
           branch: 'workflow/update-protos'
-          add-paths: src/viam/api/*
+          add-paths: src/viam/api/*, src/viam/sdk/CMakeLists.txt
           delete-branch: true
           title: Automated Protos Update
           body: This is an auto-generated PR to update proto definitions. Check the commits to see which repos and commits are responsible for the changes
