--- a/src/viam/sdk/common/private/version_metadata.hpp.in
+++ b/src/viam/sdk/common/private/version_metadata.hpp.in
@@ -1,9 +1,11 @@
-#include <viam/sdk/common/private/version_metadata.hpp>
+#pragma once
 
 namespace viam {
 namespace sdk {
+namespace impl {
 
 constexpr char k_version[] = "cpp;@CMAKE_PROJECT_VERSION@;@VIAMCPPSDK_API_PROTO_LABEL@";
 
+}  // namespace impl
 }  // namespace sdk
 }  // namespace viam
