tag in api/, out of test, and variably set

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -21,7 +21,14 @@ target_include_directories(viamsdk
 )
 
 # Configure the SDK version file
-set(VIAMCPPSDK_API_PROTO_LABEL "v0.1.327")
+if (VIAMCPPSDK_USE_LOCAL_PROTOS)
+  set(VIAMCPPSDK_API_PROTO_LABEL "unknown (local generation)")
+else()
+  file(READ "${CMAKE_CURRENT_SOURCE_DIR}/../api/api_proto_tag.lock" VIAMCPPSDK_API_PROTO_LABEL)
+  string(REGEX REPLACE "\n$" "" VIAMCPPSDK_API_PROTO_LABEL "${VIAMCPPSDK_API_PROTO_LABEL}")
+endif()
+message(WARNING "api proto label is ${VIAMCPPSDK_API_PROTO_LABEL}")
+#set(VIAMCPPSDK_API_PROTO_LABEL "v0.1.327")
 configure_file(common/private/version_metadata.hpp.in common/private/version_metadata.hpp @ONLY)
 
 
