add v for sdk version

--- a/src/viam/sdk/common/private/version_metadata.hpp.in
+++ b/src/viam/sdk/common/private/version_metadata.hpp.in
@@ -4,7 +4,7 @@ namespace viam {
 namespace sdk {
 namespace impl {
 
-constexpr char k_version[] = "cpp;@CMAKE_PROJECT_VERSION@;@VIAMCPPSDK_API_PROTO_LABEL@";
+constexpr char k_version[] = "cpp;v@CMAKE_PROJECT_VERSION@;@VIAMCPPSDK_API_PROTO_LABEL@";
 
 }  // namespace impl
 }  // namespace sdk
