--- a/src/viam/examples/project/pkg-config/Makefile
+++ b/src/viam/examples/project/pkg-config/Makefile
@@ -22,3 +22,6 @@ example_module.o: ../../modules/simple/main.cpp
 
 example_module: example_module.o
 	$(CXX) $(LDFLAGS) -o $@ $^
+
+clean:
+	rm -f *.o example_dial example_module
