--- a/src/viam/examples/project/pkg-config/Makefile
+++ b/src/viam/examples/project/pkg-config/Makefile
@@ -1,8 +1,13 @@
 CXX = c++
 
-CXXFLAGS = -std=c++14
+# Technically the SDK supports building with c++14, but note that more recent
+# versions of abseil will force c++17, so this may be needed to make things
+# work out of the box.
+CXX_STANDARD ?= c++17
+
+CXXFLAGS += -std=$(CXX_STANDARD)
 CXXFLAGS += `pkg-config --cflags viam-cpp-sdk-libviamsdk`
-LINKFLAGS = `pkg-config --libs viam-cpp-sdk-libviamsdk`
+LDFLAGS += `pkg-config --libs viam-cpp-sdk-libviamsdk`
 
 all: example_dial example_module
 
@@ -10,10 +15,13 @@ example_dial.o: ../../dial/example_dial.cpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $^
 
 example_dial: example_dial.o
-	$(CXX) $(LINKFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $^
 
-example_module.o: ../../modules/example_module.cpp
+example_module.o: ../../modules/simple/main.cpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $^
 
 example_module: example_module.o
-	$(CXX) $(LINKFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -o $@ $^
+
+clean:
+	rm -f *.o example_dial example_module
