--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -285,5 +285,6 @@ install(FILES
   COMPONENT viam-cpp-sdk_dev
 )
 
-
-add_subdirectory(tests)
+if (VIAMCPPSDK_BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
