--- a/src/viam/examples/dial_api_key/CMakeLists.txt
+++ b/src/viam/examples/dial_api_key/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(example_dial_api_key
 )
 
 target_link_libraries(example_dial_api_key
+  Boost::program_options
   viam-cpp-sdk::viamsdk
 )
 
